[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/UI/debugmenu/Info.gd" type="Script" id=1]
[ext_resource path="res://Fonts/debug.tres" type="DynamicFont" id=2]
[ext_resource path="res://Graphics/UI/debug/debugui.png" type="Texture" id=3]
[ext_resource path="res://Graphics/UI/partyicons.png" type="Texture" id=4]
[ext_resource path="res://Scripts/UI/debugmenu/Control.gd" type="Script" id=5]
[ext_resource path="res://Nodes/Ui/debug/debug.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 9 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.431373, 0.431373, 0.431373, 0.388235 )
border_width_left = 4
border_color = Color( 0.431373, 0.431373, 0.431373, 0.388235 )

[node name="debug" type="Control"]
margin_left = -35.0
margin_right = -35.0
mouse_filter = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 81.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 20, 20 )
texture = ExtResource( 3 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="CanvasLayer/Main"]
margin_left = 4.0
margin_top = 2.0
margin_right = 39.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main"]
margin_left = 3.0
margin_top = 19.0
margin_right = 77.0
margin_bottom = 33.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="CanvasLayer/Main/VBoxContainer"]
margin_right = 74.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
text = "Poo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="Sprite" parent="CanvasLayer/Main"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 71, 8 )
texture = ExtResource( 4 )
hframes = 6
frame = 4

[node name="Area2D" type="Area2D" parent="CanvasLayer/Main/close"]
position = Vector2( -91, -15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Main/close/Area2D"]
position = Vector2( 90, 16 )
shape = SubResource( 1 )

[node name="Info" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 206.0
margin_top = 1.0
margin_right = 319.0
margin_bottom = 83.0
mouse_filter = 1
texture = ExtResource( 3 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="CanvasLayer/Info"]
margin_left = 3.0
margin_top = 2.0
margin_right = 77.0
margin_bottom = 13.0
mouse_filter = 1
custom_fonts/font = ExtResource( 2 )
text = "Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Info"]
margin_left = 4.0
margin_top = 19.0
margin_right = 110.0
margin_bottom = 90.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="fpsdisplay" type="Label" parent="CanvasLayer/Info/VBoxContainer"]
margin_right = 106.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
text = "FPS: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map" type="Label" parent="CanvasLayer/Info/VBoxContainer"]
margin_top = 15.0
margin_right = 106.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Map:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos" type="Label" parent="CanvasLayer/Info/VBoxContainer"]
margin_top = 30.0
margin_right = 106.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 2 )
text = "XY:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state" type="Label" parent="CanvasLayer/Info/VBoxContainer"]
margin_top = 45.0
margin_right = 106.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 2 )
text = "State: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anim" type="Label" parent="CanvasLayer/Info/VBoxContainer"]
visible = false
margin_top = 60.0
margin_right = 106.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 2 )
text = "Anim: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="NinePatchRect" parent="CanvasLayer"]
margin_left = 185.0
margin_top = 131.0
margin_right = 319.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 56, 15 )
texture = ExtResource( 3 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
margin_left = 3.0
margin_top = 19.0
margin_right = 39.0
margin_bottom = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="party" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 36.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
text = "Party:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p1" type="Sprite" parent="CanvasLayer/Control/VBoxContainer/party"]
position = Vector2( 44, 7 )
texture = ExtResource( 4 )
hframes = 6

[node name="Area2D" type="Area2D" parent="CanvasLayer/Control/VBoxContainer/party/p1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Control/VBoxContainer/party/p1/Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="p2" type="Sprite" parent="CanvasLayer/Control/VBoxContainer/party"]
position = Vector2( 63, 7 )
texture = ExtResource( 4 )
hframes = 6
frame = 1

[node name="Area2D" type="Area2D" parent="CanvasLayer/Control/VBoxContainer/party/p2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Control/VBoxContainer/party/p2/Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="p3" type="Sprite" parent="CanvasLayer/Control/VBoxContainer/party"]
position = Vector2( 82, 7 )
texture = ExtResource( 4 )
hframes = 6
frame = 2

[node name="Area2D" type="Area2D" parent="CanvasLayer/Control/VBoxContainer/party/p3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Control/VBoxContainer/party/p3/Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="p4" type="Sprite" parent="CanvasLayer/Control/VBoxContainer/party"]
position = Vector2( 101, 7 )
texture = ExtResource( 4 )
hframes = 6
frame = 3

[node name="Area2D" type="Area2D" parent="CanvasLayer/Control/VBoxContainer/party/p4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Control/VBoxContainer/party/p4/Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="p5" type="Sprite" parent="CanvasLayer/Control/VBoxContainer/party"]
position = Vector2( 120, 7 )
texture = ExtResource( 4 )
hframes = 6
frame = 4

[node name="Area2D" type="Area2D" parent="CanvasLayer/Control/VBoxContainer/party/p5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Control/VBoxContainer/party/p5/Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="title" type="Label" parent="CanvasLayer/Control"]
margin_left = 4.0
margin_top = 2.0
margin_right = 80.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = "Control"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" type="NinePatchRect" parent="CanvasLayer"]
visible = false
margin_left = 20.0
margin_top = 11.0
margin_right = 293.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 20, 20 )
texture = ExtResource( 3 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="CanvasLayer/Console"]
margin_left = 4.0
margin_top = 2.0
margin_right = 46.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = "Console"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Console"]
margin_left = 3.0
margin_top = 130.0
margin_right = 270.0
margin_bottom = 131.0
color = Color( 0.431373, 0.431373, 0.431373, 0.85098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Console"]
margin_left = 3.0
margin_top = 16.0
margin_right = 270.0
margin_bottom = 17.0
color = Color( 0.431373, 0.431373, 0.431373, 0.85098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Console"]
margin_left = 7.0
margin_top = 135.0
margin_right = 265.0
margin_bottom = 150.0
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "AAAAAAAA"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Console"]
margin_left = 5.0
margin_top = 21.0
margin_right = 268.0
margin_bottom = 124.0
custom_fonts/normal_font = ExtResource( 2 )
text = "aaa
aaa
aaa
aaa
aaa
aaa
aaa
aaa
aaa
aaa"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="CanvasLayer/Main/close/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="CanvasLayer/Control/VBoxContainer/party/p1/Area2D" to="CanvasLayer/Control" method="_on_P1_input_event"]
[connection signal="input_event" from="CanvasLayer/Control/VBoxContainer/party/p2/Area2D" to="CanvasLayer/Control" method="_on_p2_input_event"]
[connection signal="input_event" from="CanvasLayer/Control/VBoxContainer/party/p3/Area2D" to="CanvasLayer/Control" method="_on_p3_input_event"]
[connection signal="input_event" from="CanvasLayer/Control/VBoxContainer/party/p4/Area2D" to="CanvasLayer/Control" method="_on_p4_input_event"]
[connection signal="input_event" from="CanvasLayer/Control/VBoxContainer/party/p5/Area2D" to="CanvasLayer/Control" method="_on_p5_input_event"]
